--- a/retirement-lotto-event-08.html
+++ b/retirement-lotto-event-08.html
@@ -247,7 +247,7 @@
         <div class="section-inner">
             <h1 class="hero-title">BNK 퇴직연금 로또볼 이벤트</h1>
             <p class="hero-sub">
-                연금 행동을 완료할 때마다 로또볼을 획득합니다. <br>
+                퇴직연금을 관리만해도  로또볼을 획득합니다. <br>
                 획득한 로또볼로 6개 번호를 맞추면 경품 추첨에 자동 응모됩니다.
             </p>
             <button class="btn-primary" style="margin-top:40px;" onclick="scrollToGame()">
